<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/activatedBackgroundIndicator" >

    <ImageView
        android:id="@+id/achievementIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/m"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:id="@+id/achievementText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/achievementIcon">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reward_name"
        android:id="@+id/achievementName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reward_id"
        android:id="@+id/achievementID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earned_times"
        android:id="@+id/achievementEarnedTimes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unclaimed_count"
        android:id="@+id/achievementUnclaimedCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_earn_date"
        android:id="@+id/achievementLastEarnedDate" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="@color/color_sessionm"
        android:id="@+id/achievementPoints" />

        <ImageView
        android:id="@+id/achievementPointIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/achievementPoints"
        android:src="@drawable/m"
        android:layout_margin="5dp"/>
    </RelativeLayout>
</RelativeLayout>
